# amd-hackathon-project

./: .env  .env.example  GRC_Framework_Research.md  GRC_Platform_Architecture.md  Validation_Contract.md  Validation_Contracts.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py  evidence_analyzer.py  grc_chatbot.py  guardrails.py  router.py  tools.py
api/: __init__.py  database.py  main.py  models.py
api/routes/: __init__.py  agents.py  audit.py  evidence.py  frameworks.py  rag.py  reports.py  reviews.py  users.py
app/: __init__.py  api_client.py
app/pages/: __init__.py  control_detail.py  framework_library.py
config/: __init__.py  settings.py
pages/: __init__.py  audit_logs.py  chat.py  control_detail.py  dashboard.py  evidence_detail.py  evidence_library.py  framework_library.py  reviews.py  sessions.py
rag/: __init__.py  embedding_service.py  knowledge_loader.py  search_service.py
scripts/: __init__.py  init_db.py  seed_data.py  seed_knowledge.py
tests/: __init__.py  test_api.py  test_rag_search.py
