[project]
name = "grc-platform"
version = "0.1.0"
description = "GRC Platform MVP - Governance, Risk, and Compliance management for datacenter companies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "agno>=0.1.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.0",
    "openai>=1.6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "Pillow>=10.1.0",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["grc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
